# copier-bookshelf-dataset

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  copier.yaml  ctt.toml  pyproject.toml  towncrier.toml
.github/workflows/: ci.yaml  release.yaml
changelog/: 1.docs.md  1.feat.md  2.feat.md  3.fix.md  5.improvement.md  7.fix.md  8.feature.md  README.md
scripts/: changelog-to-release-template.py  create-github-project.sh  get-version.py
template/: .pre-commit-config.yaml  Makefile  Makefile.jinja  README.md  pyproject.toml  pyproject.toml.jinja  ruff.toml  towncrier.toml  towncrier.toml.jinja
template/.github/workflows/: bump.yaml  deploy.yaml
template/scripts/: changelog-to-release-template.py  changelog-to-release-template.py.jinja
template/src/: {{dataset_name}}.py  {{dataset_name}}.py.jinja  {{dataset_name}}.yaml  {{dataset_name}}.yaml.jinja
tests/: test_ctt_directories.py
tests/regression/ctt/defaults/: .copier-answers.yml  Makefile  README.md  pyproject.toml  ruff.toml  towncrier.toml
tests/regression/ctt/defaults/.github/actions/setup/: action.yml
tests/regression/ctt/defaults/.github/workflows/: ci.yaml  release.yaml
tests/regression/ctt/defaults/changelog/: README.md
tests/regression/ctt/defaults/scripts/: changelog-to-release-template.py
tests/regression/ctt/defaults/src/: example.py  example.yaml
